RESOLVED FIXED58178
http/tests/loading/preload-append-scan.php is failing on Windows
https://bugs.webkit.org/show_bug.cgi?id=58178
Summary http/tests/loading/preload-append-scan.php is failing on Windows
Jon Honeycutt
Reported 2011-04-08 17:06:00 PDT
http/tests/loading/preload-append-scan.php is failing on Windows: http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r83325%20(11409)/http/tests/loading/preload-append-scan-pretty-diff.html This is probably due to the behavior of the function: wstring lastPathComponent(const wstring&) In Windows's DumpRenderTree.cpp.
Attachments
Jon Honeycutt
Comment 1 2011-04-08 18:40:10 PDT
Fixed in r83371.
Note You need to log in before you can comment on or make changes to this bug.