http/tests/loading/preload-append-scan.php is failing on Windows https://bugs.webkit.org/show_bug.cgi?id=58178

Reviewed by Brian Weinstein.

* DumpRenderTree/win/DumpRenderTree.cpp:
(lastPathComponent):
Use CFURL API to find the last path component, rather than
PathFindFileName(), because the latter will include the query string.

Canonical link: https://commits.webkit.org/73143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83371 268f45cc-cd09-0410-ab3c-d52691b4dbfc